# Py-BF-Compiler

./: README.md  bf_compiler.py  bf_interpreter.py  pyproject.toml  src_parser.py  test.py
examples/: add.ll
src/brainfuck/: bf_compiler.py  bf_interpreter.py  bf_parser.py  interpreter.py  ir_vm.py  lexer.py  parser.py  preprocessor.py  src_compiler.py  src_interpreter.py  src_parser.py  utils.py
