[project]
name = "Py-BF-Runtime"
version = "0.4.0"
description = "A Brainfuck runtime implemented with Python."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Dorapower", email = "thatisluo@outlook.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Education",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]
dependencies = [
    "llvmlite >= 0.40.0",
    "numpy >= 1.24.3",
]

[project.urls]
Homepage = "https://github.com/Dorapower/Py-BF-Runtime"
Documentation = "https://github.com/Dorapower/Py-BF-Runtime/wiki"
Repository = "https://github.com/Dorapower/Py-BF-Runtime.git"
